--- a/src/style/stylenew.css
+++ b/src/style/stylenew.css
@@ -452,6 +452,7 @@ table thead tr th:last-child {
   resize: none;
   outline: none;
   padding: 10px;
+  border: 1px solid #d9d9d9;
 }
 
 .router-body .remark_wrap {
