--- a/src/style/stylenew.css
+++ b/src/style/stylenew.css
@@ -8613,7 +8613,9 @@ footer span {
 /* error page css start */
 .error_page {
   padding: 55px 0;
+  justify-content: center;
 }
+
 
 .error-button a:hover {
   color: #e30613;
