--- a/src/style/csschanges.css
+++ b/src/style/csschanges.css
@@ -327,6 +327,11 @@ margin-right: 8px !important; */
   color: red !important;
 }
 
+.errorMessage {
+  padding-right: 10px;
+  color: red !important;
+}
+
 .sub-label,
 .sub-label span {
   padding-left: 5px;
