--- a/src/style/style.css
+++ b/src/style/style.css
@@ -16,6 +16,10 @@
   border-color: #D9D9D9;
 }
 
+.noHover:hover {
+  background-color: #19A0DD !important;
+}
+
 .payment_form_wrap .row .column {
   width: 49% !important;
 }
