--- a/src/style/stylenew.css
+++ b/src/style/stylenew.css
@@ -6649,7 +6649,8 @@ iframe {
 }
 
 .dropdown2 {
-  transform: translateY(-6.5px);
+  -webkit-transform: translateY(-6.5px);
+  transform: translateY(-3px);
 }
 
 .about .inner .inner-text ul li,
@@ -7573,6 +7574,13 @@ table tr td .fa-pen-to-square {
 
 .client-section .grid-5 {
   margin: 0px -18px;
+}
+
+.client-section .grid-col h5,  .buyers_wrapper .grid-col h5{
+  text-align: center;
+ font-size: 22px;
+ font-weight: 600;
+padding: 32px 30px;
 }
 
 .client-section .grid-5 .grid-col {
