--- a/src/style/stylenew.css
+++ b/src/style/stylenew.css
@@ -454,7 +454,11 @@ table thead tr th:last-child {
   padding: 10px;
   border: 1px solid #d9d9d9;
 }
-
+.edit_remark textarea, .view_remark textarea {
+  border: 1px solid #d9d9d9;
+  font-family: Poppins,sans-serif;
+  font-size: 16px;
+} 
 .router-body .remark_wrap {
   padding: 30px 0 50px;
 }
