--- a/src/style/reset.css
+++ b/src/style/reset.css
@@ -16,12 +16,16 @@ body {
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
 }
+.font-fm {
+  font-family: 'Poppins', sans-serif !important;
 
+}
 
-.Meeting_wrap .table_form .btn-secondary:hover {
+/* .Meeting_wrap .table_form .btn-secondary:hover {
   background-color: #19A0DD;
   cursor: default !important;
-}
+}  doubt by save*/
+
 
 @media (max-width: 1024px) {
   .product_showcase .main .column {
