--- a/src/style/stylenew.css
+++ b/src/style/stylenew.css
@@ -6865,6 +6865,22 @@ table thead tr th:last-child {
 .company_wrapper .form-section .right .form-group {
   margin-bottom: 0px;
 }
+.company_wrapper .form-section .right .custom_dropdown  {
+  position: relative;
+}
+.company_wrapper .form-section .right .custom_dropdown_inner {
+  background: #fff;
+  border: 1px solid #e4e4e4;
+  border-radius: 25px;
+  box-shadow: 2px 2px 6px 0 #0000002b;
+  height: 250px;
+  overflow-y: auto;
+  padding: 20px;
+  margin-top: 3px;
+  position: absolute;
+  width: 100%;
+  z-index: 999!important;
+  }
 
 .company_wrapper .form-section .right.pd-bt .form-group {
   padding-bottom: 32px;
