--- a/src/pages/dashboardPages/invoice.css
+++ b/src/pages/dashboardPages/invoice.css
@@ -1,9 +1,9 @@
 * {
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    font-family: Poppins,sans-serif !important;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .mainDiv {
