--- a/src/pages/dashboardPages/invoice.css
+++ b/src/pages/dashboardPages/invoice.css
@@ -1,10 +1,12 @@
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+
 }
+
 
 .mainDiv {
     width: 800px;
