--- a/src/style/stylenew.css
+++ b/src/style/stylenew.css
@@ -79,6 +79,22 @@
   padding: 12px;
 }
 
+form.payment_form_wrap h6 {
+  padding: 10px 0 20px !important;
+}
+
+form.payment_form_wrap li {
+  margin-left: 15px;
+}
+
+.payment_form_wrap input[type="checkbox"] {
+  margin-right: 15px;
+}
+
+.payment_form_wrap .button {
+  margin-top: 20px;
+}
+
 .upload-files .delete {
   padding: 12px;
 }
@@ -454,11 +470,14 @@ table thead tr th:last-child {
   padding: 10px;
   border: 1px solid #d9d9d9;
 }
-.edit_remark textarea, .view_remark textarea {
+
+.edit_remark textarea,
+.view_remark textarea {
   border: 1px solid #d9d9d9;
-  font-family: Poppins,sans-serif;
+  font-family: Poppins, sans-serif;
   font-size: 16px;
-} 
+}
+
 .router-body .remark_wrap {
   padding: 30px 0 50px;
 }
@@ -6865,9 +6884,11 @@ table thead tr th:last-child {
 .company_wrapper .form-section .right .form-group {
   margin-bottom: 0px;
 }
-.company_wrapper .form-section .right .custom_dropdown  {
+
+.company_wrapper .form-section .right .custom_dropdown {
   position: relative;
 }
+
 .company_wrapper .form-section .right .custom_dropdown_inner {
   background: #fff;
   border: 1px solid #e4e4e4;
@@ -6879,8 +6900,8 @@ table thead tr th:last-child {
   margin-top: 3px;
   position: absolute;
   width: 100%;
-  z-index: 999!important;
-  }
+  z-index: 999 !important;
+}
 
 .company_wrapper .form-section .right.pd-bt .form-group {
   padding-bottom: 32px;
@@ -7604,7 +7625,8 @@ table tr td .fa-pen-to-square {
   padding: 0px 16px;
 }
 
-.buyers_wrapper .grid-col h5, .client-section .grid-col h5 {
+.buyers_wrapper .grid-col h5,
+.client-section .grid-col h5 {
   font-size: 20px;
   font-weight: 600;
   padding: 8px;
@@ -13059,19 +13081,19 @@ footer .f-logos {
 
 
 @media (min-width: 1025px) and (max-width: 1080px) {
-	
+
   .header .logo {
-      margin-right: 10px;
+    margin-right: 10px;
   }
-  
+
   .header .nav li {
-      display: inline-block;
-      padding: 0 10px;
-      position: relative;
+    display: inline-block;
+    padding: 0 10px;
+    position: relative;
   }
-  
+
   .header .nav li a {
-     font-size : 15px !important;
-  
+    font-size: 15px !important;
+
   }
-    }
+}
