--- a/src/style/csschanges.css
+++ b/src/style/csschanges.css
@@ -472,7 +472,7 @@ table td {
 }
 
 .modal .modal-content {
-  background-color: #f7f7f6 !important;
+  box-shadow: 0 1px 3px #f7f7f6;
   color: #000 !important;
   z-index: 99;
   display: flex;
